k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ting
  namespace: ting
spec:
  selector: {app: ting}
  ports:
  - port: 80
    targetPort: 8000
