k8s/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ting
  namespace: ting
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: kube-system
    kind: Gateway
    sectionName: web
  hostnames:
  - "ting.cmdbee.org"
  rules:
  - matches:
    - path: {type: PathPrefix, value: "/"}
    backendRefs:
    - name: ting
      port: 80
